[gd_scene load_steps=6 format=3 uid="uid://bdifti6ny0mcj"]

[ext_resource type="Script" path="res://Scenes/wall.gd" id="1_cus7n"]
[ext_resource type="Texture2D" uid="uid://5b8vfxgp1m0n" path="res://Treasure Hunters/Pirate Ship/Sprites/Tilesets/Terrain and Back Wall (32x32).png" id="2_nphyn"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jx015"]
texture = ExtResource("2_nphyn")
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
10:2/0 = 0
11:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
32:2/0 = 0
33:2/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
10:3/0 = 0
11:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
32:3/0 = 0
33:3/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
10:4/0 = 0
11:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
32:4/0 = 0
33:4/0 = 0
34:4/0 = 0
35:4/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
10:5/0 = 0
11:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
32:5/0 = 0
33:5/0 = 0
34:5/0 = 0
35:5/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
10:6/0 = 0
11:6/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
10:7/0 = 0
11:7/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
32:8/0 = 0
33:8/0 = 0
34:8/0 = 0
35:8/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
32:9/0 = 0
33:9/0 = 0
34:9/0 = 0
35:9/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
10:10/0 = 0
11:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
26:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
32:10/0 = 0
33:10/0 = 0
34:10/0 = 0
35:10/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
10:11/0 = 0
11:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
26:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
32:11/0 = 0
33:11/0 = 0
34:11/0 = 0
35:11/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
10:14/0 = 0
11:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
32:14/0 = 0
33:14/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
10:15/0 = 0
11:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
26:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
32:15/0 = 0
33:15/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
10:16/0 = 0
11:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
20:16/0 = 0
21:16/0 = 0
22:16/0 = 0
23:16/0 = 0
26:16/0 = 0
27:16/0 = 0
28:16/0 = 0
29:16/0 = 0
32:16/0 = 0
33:16/0 = 0
34:16/0 = 0
35:16/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
10:17/0 = 0
11:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
23:17/0 = 0
26:17/0 = 0
27:17/0 = 0
28:17/0 = 0
29:17/0 = 0
32:17/0 = 0
33:17/0 = 0
34:17/0 = 0
35:17/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
10:18/0 = 0
11:18/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
10:19/0 = 0
11:19/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
20:20/0 = 0
21:20/0 = 0
22:20/0 = 0
23:20/0 = 0
26:20/0 = 0
27:20/0 = 0
28:20/0 = 0
29:20/0 = 0
32:20/0 = 0
33:20/0 = 0
34:20/0 = 0
35:20/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
20:21/0 = 0
21:21/0 = 0
22:21/0 = 0
23:21/0 = 0
26:21/0 = 0
27:21/0 = 0
28:21/0 = 0
29:21/0 = 0
32:21/0 = 0
33:21/0 = 0
34:21/0 = 0
35:21/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
10:22/0 = 0
11:22/0 = 0
14:22/0 = 0
15:22/0 = 0
16:22/0 = 0
17:22/0 = 0
20:22/0 = 0
21:22/0 = 0
22:22/0 = 0
23:22/0 = 0
26:22/0 = 0
27:22/0 = 0
28:22/0 = 0
29:22/0 = 0
32:22/0 = 0
33:22/0 = 0
34:22/0 = 0
35:22/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
10:23/0 = 0
11:23/0 = 0
14:23/0 = 0
15:23/0 = 0
16:23/0 = 0
17:23/0 = 0
20:23/0 = 0
21:23/0 = 0
22:23/0 = 0
23:23/0 = 0
26:23/0 = 0
27:23/0 = 0
28:23/0 = 0
29:23/0 = 0
32:23/0 = 0
33:23/0 = 0
34:23/0 = 0
35:23/0 = 0

[sub_resource type="TileSet" id="TileSet_gbdwr"]
sources/0 = SubResource("TileSetAtlasSource_jx015")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kq8wi"]
size = Vector2(26, 390)

[node name="Wall" type="Area2D"]
collision_layer = 2
script = ExtResource("1_cus7n")

[node name="Walls" type="TileMap" parent="."]
tile_set = SubResource("TileSet_gbdwr")
cell_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(458751, 655360, 16, 524287, 655360, 17, 589823, 655360, 18, 655359, 655360, 19, 720895, 655360, 14, 786431, 655360, 15, 851967, 655360, 16, 917503, 655360, 17, 983039, 655360, 18, 1048575, 655360, 19, 1114111, 655360, 14, 1179647, 655360, 15, 1245183, 655360, 16, 1310719, 655360, 17, 1376255, 655360, 18, 1441791, 655360, 19, 1507327, 655360, 14, 1572863, 655360, 15, 1638399, 655360, 16, 1703935, 655360, 17, 1769471, 655360, 18, 1835007, 655360, 19, 393216, 720896, 16, 458752, 720896, 17, 524288, 720896, 18, 589824, 720896, 19, 655360, 720896, 14, 720896, 720896, 15, 786432, 720896, 16, 851968, 720896, 17, 917504, 720896, 18, 983040, 720896, 19, 1048576, 720896, 14, 1114112, 720896, 15, 1179648, 720896, 16, 1245184, 720896, 17, 1310720, 720896, 18, 1376256, 720896, 19, 1441792, 720896, 14, 1507328, 720896, 15, 1572864, 720896, 16, 1638400, 720896, 17, 1703936, 720896, 18, 1769472, 720896, 19, 327679, 655360, 14, 393215, 655360, 15, 262144, 720896, 14, 327680, 720896, 15, -1638401, 655360, 14, -1572865, 655360, 15, -1507329, 655360, 16, -1441793, 655360, 17, -1376257, 655360, 18, -1310721, 655360, 19, -1245185, 655360, 14, -1179649, 655360, 15, -1114113, 655360, 16, -1048577, 655360, 17, -983041, 655360, 18, -917505, 655360, 19, -851969, 655360, 15, -786433, 655360, 16, -720897, 655360, 17, -655361, 655360, 18, -589825, 655360, 19, -524289, 655360, 14, -458753, 655360, 15, -393217, 655360, 16, -327681, 655360, 17, -1703936, 720896, 14, -1638400, 720896, 15, -1572864, 720896, 16, -1507328, 720896, 17, -1441792, 720896, 18, -1376256, 720896, 19, -1310720, 720896, 14, -1245184, 720896, 15, -1179648, 720896, 16, -1114112, 720896, 17, -1048576, 720896, 18, -983040, 720896, 19, -917504, 720896, 15, -851968, 720896, 16, -786432, 720896, 17, -720896, 720896, 18, -655360, 720896, 19, -589824, 720896, 14, -524288, 720896, 15, -458752, 720896, 16, -393216, 720896, 17, -262145, 655360, 18, -196609, 655360, 19, -327680, 720896, 18, -262144, 720896, 19)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -243)
shape = SubResource("RectangleShape2D_kq8wi")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, 259)
shape = SubResource("RectangleShape2D_kq8wi")

[connection signal="body_entered" from="." to="." method="_on_body_entered" flags=18]
